--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="nav-boundary">
              
 
-              <ul class="hidden-xs hidden-sm nav_row nav-bottom ">
+              <ul class=" nav_row nav-bottom ">
                 
                 <li class="nav-arrow smooth-scroll">
                   <a href="#abt" class="nav-content" title="down-arrow">
@@ -59,7 +59,9 @@
                     <span class="icon-bar"></span>
                   </button>
                   <a class="navbar-brand" href="#fixme">
-                    Ink<span class="secondary">Blink</span>
+                    <!-- Ink<span class="secondary">Blink</span> -->
+                    <img class="logo" src="images/logomini.png" alt="logo">
+                    <img  class="name hidden-xs sm" src="images/logoname.png" alt="logo">
                   </a>
                 </div>
 
